--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header class="main-header">
     <div class="menu-icon" id="menuToggle">☰</div>
-    <img src="logo.png" alt="Logo SCPD" class="header-logo">
+    <img src="assets/logo.png" alt="Logo SCPD" class="header-logo">
     <h1 id="logo" class="logo">SCPD_PRODUCTION</h1>
   </header>
 
@@ -43,9 +43,9 @@
       © 2025 by SCPD_PRODUCTION
     </div>
     <div class="social-links">
-      <a href="https://instagram.com/" target="_blank"><img src="instagram.png" alt="Instagram" class="social-icon"></a>
-      <a href="https://facebook.com/" target="_blank"><img src="facebook.png" alt="Facebook" class="social-icon"></a>
-      <a href="https://twitter.com/" target="_blank"><img src="twitter.png" alt="Twitter" class="social-icon"></a>
+      <a href="https://instagram.com/" target="_blank"><img src="assets/instagram.png" alt="Instagram" class="social-icon"></a>
+      <a href="https://facebook.com/" target="_blank"><img src="assets/facebook.png" alt="Facebook" class="social-icon"></a>
+      <a href="https://twitter.com/" target="_blank"><img src="assets/twitter.png" alt="Twitter" class="social-icon"></a>
     </div>
   </footer>
 </body>
