--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
   <!-- Footer -->
   <footer class="main-footer">
     <div class="copyright">
-      © 2025 by SCPD_PRODUCTION
+      ©Copyright 2025 by SCPD_PRODUCTION
     </div>
     <div class="social-links">
-      <a href="https://instagram.com/" target="_blank"><img src="assets/instagram.png" alt="Instagram" class="social-icon"></a>
-      <a href="https://facebook.com/" target="_blank"><img src="assets/facebook.png" alt="Facebook" class="social-icon"></a>
-      <a href="https://twitter.com/" target="_blank"><img src="assets/twitter.png" alt="Twitter" class="social-icon"></a>
+      <a href="instagram.com/scpd_production" target="_blank"><img src="assets/instagram.png" alt="Instagram" class="social-icon"></a>
+      <a href="tiktok.com/@scpd_production?_t=ZS-8xslnZrs1bD&_r=1" target="_blank"><img src="assets/tiktok.png" alt="Tiktok" class="social-icon"></a>
+      <a href="whatsapp.com/channel/0029Vb67YjoInlqX4IGqhe1L" target="_blank"><img src="assets/whatsapp.png" alt="Whatsapp" class="social-icon"></a>
+      <a href="https://www.youtube.com/@SCPD_PRODUCTION12x" target="_blank"><img src="assets/youtube.png" alt="youtube" class="social-icon"></a>
     </div>
   </footer>
 </body>
