--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SCPD_PRODUCTION</title>
+  
+<!-- Fav Icon  -->
+    <link rel="shortcut icon" href="./assets/scpd.png" type="image/x-icon">
+
   <link rel="stylesheet" href="main.css">
   <script type="module" src="main.js"></script>
 </head>
