--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SCPD_PRODUCTION</title>
   
-<!-- Fav Icon  -->
-    <link rel="shortcut icon" href="./assets/scpd.png" type="image/x-icon">
+  <!-- Fav Icon -->
+  <link rel="shortcut icon" href="./assets/scpd.png" type="image/x-icon">
 
   <link rel="stylesheet" href="main.css">
   <script type="module" src="main.js"></script>
@@ -17,6 +17,11 @@
     <div class="menu-icon" id="menuToggle">☰</div>
     <img src="assets/logo.png" alt="Logo SCPD" class="header-logo">
     <h1 id="logo" class="logo">SCPD_PRODUCTION</h1>
+
+    <!-- 🔍 Search Bar -->
+    <div class="search-bar">
+      <input type="text" id="searchInput" placeholder="Cari produk..." />
+    </div>
   </header>
 
   <!-- Tentang Kami -->
@@ -47,9 +52,9 @@
       ©Copyright 2025 by SCPD_PRODUCTION
     </div>
     <div class="social-links">
-      <a href="instagram.com/scpd_production" target="_blank"><img src="assets/instagram.png" alt="Instagram" class="social-icon"></a>
-      <a href="tiktok.com/@scpd_production?_t=ZS-8xslnZrs1bD&_r=1" target="_blank"><img src="assets/tiktok.png" alt="Tiktok" class="social-icon"></a>
-      <a href="whatsapp.com/channel/0029Vb67YjoInlqX4IGqhe1L" target="_blank"><img src="assets/whatsapp.png" alt="Whatsapp" class="social-icon"></a>
+      <a href="https://instagram.com/scpd_production" target="_blank"><img src="assets/instagram.png" alt="Instagram" class="social-icon"></a>
+      <a href="https://www.tiktok.com/@scpd_production?_t=ZS-8xslnZrs1bD&_r=1" target="_blank"><img src="assets/tiktok.png" alt="Tiktok" class="social-icon"></a>
+      <a href="https://whatsapp.com/channel/0029Vb67YjoInlqX4IGqhe1L" target="_blank"><img src="assets/whatsapp.png" alt="Whatsapp" class="social-icon"></a>
       <a href="https://www.youtube.com/@SCPD_PRODUCTION12x" target="_blank"><img src="assets/youtube.png" alt="youtube" class="social-icon"></a>
     </div>
   </footer>
