--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     <section class="about-us">
       <h2>Tentang Kami</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec purus eu
-        justo commodo cursus. Sed a nulla eget ligula tempor ultrices. Donec
-        faucibus, nisl a pretium laoreet, justo nunc laoreet ex, sit amet feugiat
-        nulla sapien sed libero.
+        SCPD_PRODUCTION MERUPAKAN PERUSAHAAN YANG BERGERAK DI BIDANG GAME
+        ATAU BISA DI SEBUT MODDER, KEBERADAAN KAMI DI SINI BERTUJUAN UNTUK 
+        MEMBUAT GAME TERASA NYAMAN SERU DAN REALISTIS DENGAN MOD-MOD YANG
+        KAMI HADIRKAN, KAMI MEMBUAT MOD-MOD SEMIRIP MUNGKIN DENGAN ASLINYA
+        DENGAN HARGA YANG TERJANGKAU OLEH ANAK SEKOLAH / DANA PELAJAR.
       </p>
       <p>
-        Phasellus feugiat diam at mi tincidunt, vitae luctus ligula venenatis.
-        Suspendisse potenti. Vestibulum ante ipsum primis in faucibus orci luctus
-        et ultrices posuere cubilia curae; Mauris malesuada felis vel justo
-        bibendum, non posuere leo pretium.
+        SCPD_PRODUCTION BERDIRI PADA TANGGAL 1 NOVEMBER 2024
+        KAMI SCPD_PRODUCTION BERSEDIA MENGHADIRKAN MOD-MOD YANG MIRIP
+        DENGAN ASLINYA. SCPD_PRODUCTION — Mewujudkan Ide, Menciptakan Karya.
       </p>
     </section>
 
