--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <p>
         SCPD_PRODUCTION BERDIRI PADA TANGGAL 1 NOVEMBER 2024
         KAMI SCPD_PRODUCTION BERSEDIA MENGHADIRKAN MOD-MOD YANG MIRIP
-        DENGAN ASLINYA. SCPD_PRODUCTION — Mewujudkan Ide, Menciptakan Karya.
+        DENGAN ASLINYA. 
+        SCPD_PRODUCTION — Mewujudkan Ide, Menciptakan Karya.
       </p>
     </section>
 
